--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                 <h1 style="font-size: 70px">Mark</h1>
                 <h1 style="font-size: 70px">Reccardo</h1>
                 <h7
-                  >A young <h7 class="text-danger">UI/UX</h7> designer with
-                  crazy for web design</h7
+                  >A young <h7 class="text-danger">UI/UX</h7> designer for mobile & web design</h7
                 >
                 <h6 class="mt-3">Find Me on</h6>
                 <i class="fa-brands fa-instagram me-2 fa-xl"></i>
@@ -91,7 +90,7 @@
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco
                   laboris nisi ut aliquip ex ea commodo consequat
                 </h5>
-                <a href="img/example_CV.docx" download><button type="button" class="btn btn-outline-light mt-5">
+                <a href="img/cv_sample.pdf" download><button type="button" class="btn btn-outline-light mt-5">
                   Download CV
                 </button></a>
               </div>
