--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Simple Portofolio</title>
     <link rel="stylesheet" href="img/fontawesome-free-6.1/css/all.css" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
-
-    <!-- Custom styles for this template -->
-    <link href="headers.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
@@ -90,7 +87,7 @@
                   Ut enim ad minim veniam, quis nostrud exercitation ullamco
                   laboris nisi ut aliquip ex ea commodo consequat
                 </h5>
-                <a href="img/cv_sample.pdf" download><button type="button" class="btn btn-outline-light mt-5">
+                <a href="img/cv_sample.pdf" download="cv.pdf"><button type="button" class="btn btn-outline-light mt-5">
                   Download CV
                 </button></a>
               </div>
